<resources>
    <string name="app_name">שחרית</string>
    <string name="welcome_msg">Welcome!</string>
    <string name="sign_out">צא</string>
    <string name="contacts_permission_rationale">Access to account information is required to sign in.</string>
    <string name="invite_menu_label">הזמן</string>
    <string name="invitation_message">Check out the "Shaharit" app</string>
    <string name="invitation_cta">Call to action</string>
    <string name="invitation_title">Shaharit Face2Face Invite</string>
    <string name="sign_in">משתמש חדש</string>
    <string name="sign_up">Sign Up</string>
    <string name="fresh_config">Fresh Config</string>
    <string name="cause_crash">Cause Crash</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="facebook_app_id">133262220438718</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    // NavBar
    <string name="nav_default">דף בית</string>
    <string name="nav_choose_other">בחירת האחר</string>
    <string name="nav_who_am_I">מי אני</string>
    <string name="nav_profile">פרופיל</string>
    <string name="nav_group_interactions">אינטראקציות</string>
    <string name="nav_my_friends">החברים שלי</string>
    <string name="nav_my_received_gifts">מתנות שקיבלתי</string>
    <string name="nav_my_sent_gifts">מתנות ששלחתי</string>
    <string name="nav_gifts">מתנות</string>
    <string name="otherLabel">את מי את/ה מחפש/ת</string>
    <string name="selfLabel">איך אתה מגדיר את עצמך</string>

    // Other Definition
    <string name="other_definition_pick_alert_message">אנא בחר הגדרה אחת</string>
    <string name="other_definition_pick_alert_title">בחירת האחר</string>
    <string name="other_definition_pick_alert_button">אישור</string>

    // Self Definition
    <string name="self_definition_pick_alert_message">אנא בחר שלוש הגדרות</string>
    <string name="self_definition_pick_alert_title">הגדרה עצמית</string>
    <string name="self_definition_pick_alert_button">אישור</string>

    // Profile interests
    <string name="tv_shows_title">תוכניות טלויזיה אהובות</string>
    <string name="hobbies_title">תחביבים</string>
    <string name="save_button">שמור</string>

    // Activities
    <string name="buddy_image_description">התמונה של הבאדי שלך</string>
    <string name="found_match_str">נמצאה התאמה בתחומי העניין הבאים:</string>
    <string name="send_message_button_text">שלח הודעה</string>
    <string name="send_flowers_button_text">שלח פרחים</string>
    <string name="send_gift_button_text">שלח מתנה</string>
    <string name="send_video_button_text">שלח סרטון</string>
    <string name="send_present_button_text">שלח מתנה</string>
    <string name="send_email_button_text">שלח מייל</string>

    // Profile details page
    <string name="profile_details_name_label">שם:</string>
    <string name="profile_details_name_hint">שם</string>

    // Welcome
    <string name="shacharit_explanation">החברה הישראלית נתפשת כריבוי של שסעים המאיימים לקרוע את המדינה לגזרים. ריבוי הזהויות, העמדות והמסורות לא חייב להוביל לניתוק ולמאבק; הוא יכול לייצר זירה ציבורית תוססת וססגונית, שבה ייפגשו ויעשירו אלה את אלה עולמות ותפישׂות שונות. מזמינים להיפגש במרחב הזה להכיר ולהנות, זה מתרבותו של זה.</string>
    <string name="wait_for_notifications">התראה תתקבל ברגע שנמצא התאמה עבורך</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_success">השינויים נשמרו בהצלחה</string>
    <string name="oneitemlimit">ניתן לבחור עד פריט אחד</string>
    <string name="itemlimit">ניתן לבחור עד %d פריטים</string>
    <string name="image_upload">העלה תמונה</string>

    <string name="sharedInterestsTitle">תחומי עניין משותפים</string>
    <string name="interestsTitle">תחומי עניין נוספים</string>
    <string name="chooseGreeting">בחר ברכה</string>
    <string name="chooseVideo">בחר סרטון</string>
    <string name="chooseGift">בחר מתנה</string>
    <string name="confirmGiftTitle">בחרת לשלוח ל%2$s %1$s לרגל %3$s</string>

    <string name="greetingDescription">ברכה</string>
    <string name="physicalDescription">מתנה</string>
    <string name="videoDescription">סרטון</string>

    <string name="next">הבא</string>
    <string name="previous">הקודם</string>

    <string name="giftUrl"><a href="%1$s">%2%s</a></string>
</resources>
