<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_default"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/nav_default"/>
        <item
            android:id="@+id/nav_choose_other"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_choose_other"/>
        <item
            android:id="@+id/nav_who_am_I"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_who_am_I"/>
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_profile"/>
    </group>

    <item android:title="@string/nav_group_interactions">
        <menu>
            <item
                android:id="@+id/nav_my_friends"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_my_friends"/>
            <item
                android:id="@+id/nav_gifts"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_gifts"/>
        </menu>
    </item>

</menu>
