<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.google.face2face.ProfileDetailsFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/profile_details_profile_imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_account_circle_black_36dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/image_upload"
            android:id="@+id/profile_details_image_uplaod"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentBottom="true"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layoutDirection="rtl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_details_name_label"/>
            <EditText
                android:id="@+id/profile_details_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:hint="@string/profile_details_name_hint" />
        </LinearLayout>
        <RelativeLayout
            android:id="@+id/fragment_self_definition_inner_linear_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="הבא"
                android:id="@+id/profile_details_save_button"
                android:layout_gravity="center_horizontal"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>
    </LinearLayout>

</FrameLayout>
