<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.shaharit.face2face.MatchFragment">

    <!-- TODO: Add whatsapp and facebook buttons centered, at the bottom of the page -->

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/contact">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/match_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:orientation="vertical">

                <com.android.volley.toolbox.NetworkImageView
                    android:id="@+id/buddy_image"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:background="@drawable/ic_account_circle_black_36dp"
                    android:contentDescription="@string/buddy_image_description"
                    android:scaleType="centerCrop" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ddd"
                    android:orientation="vertical">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="#aaa" />

                    <TextView
                        android:id="@+id/buddyName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_margin="10dp"
                        android:textColor="#444"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/eventTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:textColor="#888"
                        android:textSize="16sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#555" />
                </LinearLayout>

                <TextView
                    android:layout_margin="10dp"
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#333"
                    android:textSize="16sp" />

                <LinearLayout
                    android:visibility="gone"
                    android:id="@+id/chooseGreetingLayout"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#666"/>

                    <LinearLayout
                        android:id="@+id/chooseGreeting"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:src="@drawable/ic_message_white_24dp"
                            android:background="@drawable/circle_button_primary" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginStart="10dp"
                            android:text="@string/chooseGreeting" />
                    </LinearLayout>

                </LinearLayout>
                <LinearLayout
                    android:visibility="gone"
                    android:id="@+id/chooseVideoLayout"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#666"/>

                    <LinearLayout
                        android:id="@+id/chooseVideo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:src="@drawable/ic_play_circle_filled_white_24dp"
                            android:background="@drawable/circle_button_primary" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginStart="10dp"
                            android:text="@string/chooseVideo" />
                    </LinearLayout>

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/chooseGiftLayout"
                    android:visibility="gone"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#666"/>

                    <LinearLayout
                        android:id="@+id/chooseGift"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:src="@drawable/ic_card_giftcard_white_24dp"
                            android:background="@drawable/circle_button_primary" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginStart="10dp"
                            android:text="@string/chooseGift" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fabEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="220dp"
                android:src="@android:drawable/ic_dialog_email"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>